# dwiq-client-cli

./: .env  .env.example  .env.prod  .gitignore  Makefile  README.md  alembic.ini  conda.sh  pyproject.toml  setup.cfg  setup.py
commons/: __init__.py
darkwebiq/: __init__.py
darkwebiq/alembic/: env.py
darkwebiq/alembic/versions/: 98e7e55ff987_initial_table_creation_in_bigquery.py
darkwebiq/alembic/versions_old/: 82d1ea88c85d_add_initial_events.py
darkwebiq/cli/: main.py  search.py
tests/integration/: __init__.py
tests/unit/cli/: test_command.py
